Upgrade to new Generics